@@ -15,7 +15,7 @@
  * limitations under the License.
  */
 
-/* $Id: RasterFont.java 946585 2010-05-20 09:52:27Z jeremias $ */
+/* $Id: RasterFont.java 1311638 2012-04-10 08:39:31Z mehdi $ */
 
 package org.apache.fop.afp.fonts;
 
@@ -23,21 +23,24 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.SortedMap;
+import java.util.TreeMap;
 
-import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 
 /**
  * A font where each character is stored as an array of pixels (a bitmap). Such
  * fonts are not easily scalable, in contrast to vectored fonts. With this type
  * of font, the font metrics information is held in character set files (one for
- * each size and style).
- * <p/>
+ * each size and style). <p/>
  *
  */
-@Slf4j
 public class RasterFont extends AFPFont {
 
-    private final SortedMap<Integer, CharacterSet> charSets = new java.util.TreeMap<>();
+    /** Static logging instance */
+    protected static final Log LOG = LogFactory.getLog("org.apache.fop.afp.fonts");
+
+    private final SortedMap<Integer, CharacterSet> charSets = new TreeMap<Integer, CharacterSet>();
     private Map<Integer, CharacterSet> substitutionCharSets;
 
     private CharacterSet charSet = null;
@@ -49,88 +52,82 @@ public class RasterFont extends AFPFont {
      * @param name
      *            the name of the font
      */
-    public RasterFont(final String name) {
+    public RasterFont(String name) {
         super(name);
     }
 
     /**
      * Adds the character set for the given point size
-     *
-     * @param size
-     *            point size (in mpt)
-     * @param characterSet
-     *            character set
+     * @param size point size (in mpt)
+     * @param characterSet character set
      */
-    public void addCharacterSet(final int size, final CharacterSet characterSet) {
-        // TODO: replace with Integer.valueOf() once we switch to Java 5
-        this.charSets.put(size, characterSet);
+    public void addCharacterSet(int size, CharacterSet characterSet) {
+        //TODO: replace with Integer.valueOf() once we switch to Java 5
+        this.charSets.put(new Integer(size), characterSet);
         this.charSet = characterSet;
     }
 
     /**
      * Get the character set metrics for the specified point size.
      *
-     * @param size
-     *            the point size (in mpt)
+     * @param sizeInMpt the point size (in mpt)
      * @return the character set metrics
      */
-    @Override
-    public CharacterSet getCharacterSet(final int size) {
+    public CharacterSet getCharacterSet(int sizeInMpt) {
 
-        // TODO: replace with Integer.valueOf() once we switch to Java 5
-        final Integer requestedSize = size;
-        CharacterSet csm = this.charSets.get(requestedSize);
+        Integer requestedSize = Integer.valueOf(sizeInMpt);
+        CharacterSet csm = (CharacterSet) charSets.get(requestedSize);
+        double sizeInPt = sizeInMpt / 1000.0;
 
         if (csm != null) {
             return csm;
         }
 
-        if (this.substitutionCharSets != null) {
-            // Check first if a substitution has already been added
-            csm = this.substitutionCharSets.get(requestedSize);
+        if (substitutionCharSets != null) {
+            //Check first if a substitution has already been added
+            csm = (CharacterSet) substitutionCharSets.get(requestedSize);
         }
 
-        if (csm == null && !this.charSets.isEmpty()) {
+        if (csm == null && !charSets.isEmpty()) {
             // No match or substitution found, but there exist entries
             // for other sizes
             // Get char set with nearest, smallest font size
-            final SortedMap<Integer, CharacterSet> smallerSizes = this.charSets
-                    .headMap(requestedSize);
-            final SortedMap<Integer, CharacterSet> largerSizes = this.charSets
-                    .tailMap(requestedSize);
-            final int smallerSize = smallerSizes.isEmpty() ? 0 : smallerSizes
-                    .lastKey().intValue();
-            final int largerSize = largerSizes.isEmpty() ? Integer.MAX_VALUE
-                    : largerSizes.firstKey().intValue();
+            SortedMap<Integer, CharacterSet> smallerSizes = charSets.headMap(requestedSize);
+            SortedMap<Integer, CharacterSet> largerSizes = charSets.tailMap(requestedSize);
+            int smallerSize = smallerSizes.isEmpty() ? 0
+                    : ((Integer)smallerSizes.lastKey()).intValue();
+            int largerSize = largerSizes.isEmpty() ? Integer.MAX_VALUE
+                    : ((Integer)largerSizes.firstKey()).intValue();
 
             Integer fontSize;
             if (!smallerSizes.isEmpty()
-                    && size - smallerSize <= largerSize - size) {
-                fontSize = smallerSize;
+                            && (sizeInMpt - smallerSize) <= (largerSize - sizeInMpt)) {
+                fontSize = Integer.valueOf(smallerSize);
             } else {
-                fontSize = largerSize;
+                fontSize = Integer.valueOf(largerSize);
             }
-            csm = this.charSets.get(fontSize);
+            csm = (CharacterSet) charSets.get(fontSize);
 
             if (csm != null) {
                 // Add the substitute mapping, so subsequent calls will
                 // find it immediately
-                if (this.substitutionCharSets == null) {
-                    this.substitutionCharSets = new HashMap<>();
+                if (substitutionCharSets == null) {
+                    substitutionCharSets = new HashMap<Integer, CharacterSet>();
                 }
-                this.substitutionCharSets.put(requestedSize, csm);
-                final String msg = "No " + size / 1000f + "pt font "
-                        + getFontName() + " found, substituted with "
-                        + fontSize.intValue() / 1000f + "pt font";
-                log.warn(msg);
+                substitutionCharSets.put(requestedSize, csm);
+                // do not output the warning if the font size is closer to an integer less than 0.1
+                if (!(Math.abs(fontSize.intValue() / 1000.0 - sizeInPt) < 0.1)) {
+                    String msg = "No " + sizeInPt + "pt font " + getFontName()
+                            + " found, substituted with " + fontSize.intValue() / 1000f + "pt font";
+                    LOG.warn(msg);
+                }
             }
         }
 
         if (csm == null) {
             // Still no match -> error
-            final String msg = "No font found for font " + getFontName()
-                    + " with point size " + size / 1000f;
-            log.error(msg);
+            String msg = "No font found for font " + getFontName() + " with point size " + sizeInPt;
+            LOG.error(msg);
             throw new FontRuntimeException(msg);
         }
 
@@ -140,45 +137,40 @@ public class RasterFont extends AFPFont {
 
     /**
      * Get the first character in this font.
-     *
      * @return the first character in this font.
      */
     public int getFirstChar() {
-        final Iterator<CharacterSet> it = this.charSets.values().iterator();
+        Iterator<CharacterSet> it = charSets.values().iterator();
         if (it.hasNext()) {
-            final CharacterSet csm = it.next();
+            CharacterSet csm = it.next();
             return csm.getFirstChar();
         } else {
-            final String msg = "getFirstChar() - No character set found for font:"
-                    + getFontName();
-            log.error(msg);
+            String msg = "getFirstChar() - No character set found for font:" + getFontName();
+            LOG.error(msg);
             throw new FontRuntimeException(msg);
         }
     }
 
     /**
      * Get the last character in this font.
-     *
      * @return the last character in this font.
      */
     public int getLastChar() {
 
-        final Iterator<CharacterSet> it = this.charSets.values().iterator();
+        Iterator<CharacterSet> it = charSets.values().iterator();
         if (it.hasNext()) {
-            final CharacterSet csm = it.next();
+            CharacterSet csm = it.next();
             return csm.getLastChar();
         } else {
-            final String msg = "getLastChar() - No character set found for font:"
-                    + getFontName();
-            log.error(msg);
+            String msg = "getLastChar() - No character set found for font:" + getFontName();
+            LOG.error(msg);
             throw new FontRuntimeException(msg);
         }
 
     }
 
-    private int metricsToAbsoluteSize(final CharacterSet cs, final int value,
-            final int givenSize) {
-        final int nominalVerticalSize = cs.getNominalVerticalSize();
+    private int metricsToAbsoluteSize(CharacterSet cs, int value, int givenSize) {
+        int nominalVerticalSize = cs.getNominalVerticalSize();
         if (nominalVerticalSize != 0) {
             return value * nominalVerticalSize;
         } else {
@@ -191,26 +183,22 @@ public class RasterFont extends AFPFont {
      * "x-height" (the height of the letter "x"), such as "d", "t", or "h". Also
      * used to denote the part of the letter extending above the x-height.
      *
-     * @param size
-     *            the font size (in mpt)
+     * @param size the font size (in mpt)
      * @return the ascender for the given point size
      */
-    @Override
-    public int getAscender(final int size) {
-        final CharacterSet cs = getCharacterSet(size);
+    public int getAscender(int size) {
+        CharacterSet cs = getCharacterSet(size);
         return metricsToAbsoluteSize(cs, cs.getAscender(), size);
     }
 
     /**
      * Obtains the height of capital letters for the specified point size.
      *
-     * @param size
-     *            the font size (in mpt)
+     * @param size the font size (in mpt)
      * @return the cap height for the specified point size
      */
-    @Override
-    public int getCapHeight(final int size) {
-        final CharacterSet cs = getCharacterSet(size);
+    public int getCapHeight(int size) {
+        CharacterSet cs = getCharacterSet(size);
         return metricsToAbsoluteSize(cs, cs.getCapHeight(), size);
     }
 
@@ -219,57 +207,47 @@ public class RasterFont extends AFPFont {
      * base line, such as "g", "j", or "p". Also used to denote the part of the
      * letter extending below the base line.
      *
-     * @param size
-     *            the font size (in mpt)
+     * @param size the font size (in mpt)
      * @return the descender for the specified point size
      */
-    @Override
-    public int getDescender(final int size) {
-        final CharacterSet cs = getCharacterSet(size);
+    public int getDescender(int size) {
+        CharacterSet cs = getCharacterSet(size);
         return metricsToAbsoluteSize(cs, cs.getDescender(), size);
     }
 
     /**
      * The "x-height" (the height of the letter "x").
      *
-     * @param size
-     *            the font size (in mpt)
+     * @param size the font size (in mpt)
      * @return the x height for the given point size
      */
-    @Override
-    public int getXHeight(final int size) {
-        final CharacterSet cs = getCharacterSet(size);
+    public int getXHeight(int size) {
+        CharacterSet cs = getCharacterSet(size);
         return metricsToAbsoluteSize(cs, cs.getXHeight(), size);
     }
 
     /**
      * Obtain the width of the character for the specified point size.
-     *
-     * @param character
-     *            the character
-     * @param size
-     *            the font size (in mpt)
+     * @param character the character
+     * @param size the font size (in mpt)
      * @return the width for the given point size
      */
-    @Override
-    public int getWidth(final int character, final int size) {
-        final CharacterSet cs = getCharacterSet(size);
-        return metricsToAbsoluteSize(cs,
-                cs.getWidth(toUnicodeCodepoint(character)), size);
+    public int getWidth(int character, int size) {
+        CharacterSet cs = getCharacterSet(size);
+        return metricsToAbsoluteSize(cs, cs.getWidth(toUnicodeCodepoint(character)), size);
     }
 
     /**
      * Get the getWidth (in 1/1000ths of a point size) of all characters in this
      * character set.
      *
-     * @param size
-     *            the font size (in mpt)
+     * @param size the font size (in mpt)
      * @return the widths of all characters
      */
-    public int[] getWidths(final int size) {
-        final CharacterSet cs = getCharacterSet(size);
-        final int[] widths = cs.getWidths();
-        for (int i = 0, c = widths.length; i < c; ++i) {
+    public int[] getWidths(int size) {
+        CharacterSet cs = getCharacterSet(size);
+        int[] widths = cs.getWidths();
+        for (int i = 0, c = widths.length; i < c; i++) {
             widths[i] = metricsToAbsoluteSize(cs, widths[i], size);
         }
         return widths;
@@ -281,32 +259,26 @@ public class RasterFont extends AFPFont {
      *
      * @return the widths of all characters
      */
-    @Override
     public int[] getWidths() {
         return getWidths(1000);
     }
 
     /** {@inheritDoc} */
-    @Override
-    public boolean hasChar(final char c) {
-        return this.charSet.hasChar(c);
+    public boolean hasChar(char c) {
+        return charSet.hasChar(c);
     }
 
     /**
      * Map a Unicode character to a code point in the font.
-     *
-     * @param c
-     *            character to map
+     * @param c character to map
      * @return the mapped character
      */
-    @Override
-    public char mapChar(final char c) {
-        return this.charSet.mapChar(c);
+    public char mapChar(char c) {
+        return charSet.mapChar(c);
     }
 
     /** {@inheritDoc} */
-    @Override
     public String getEncodingName() {
-        return this.charSet.getEncoding();
+        return charSet.getEncoding();
     }
 }
