@@ -15,7 +15,7 @@
  * limitations under the License.
  */
 
-/* $Id: NumberProperty.java 679326 2008-07-24 09:35:34Z vhennebert $ */
+/* $Id: NumberProperty.java 1303891 2012-03-22 17:04:12Z vhennebert $ */
 
 package org.apache.fop.fo.properties;
 
@@ -28,6 +28,7 @@ import org.apache.fop.datatypes.PercentBaseContext;
 import org.apache.fop.fo.FObj;
 import org.apache.fop.fo.PropertyList;
 import org.apache.fop.fo.expr.PropertyException;
+import org.apache.fop.util.CompareUtil;
 
 /**
  * Class for handling numeric properties
@@ -41,28 +42,25 @@ public final class NumberProperty extends Property implements Numeric {
 
         /**
          * Constructor for NumberProperty.Maker
-         *
-         * @param propId
-         *            the id of the property for which a Maker should be created
+         * @param propId the id of the property for which a Maker should be created
          */
-        public Maker(final int propId) {
+        public Maker(int propId) {
             super(propId);
         }
 
         /**
          * {@inheritDoc}
          */
-        @Override
-        public Property convertProperty(final Property p,
-                final PropertyList propertyList, final FObj fo)
-                throws PropertyException {
+        public Property convertProperty(Property p,
+                                        PropertyList propertyList, FObj fo)
+                    throws PropertyException {
             if (p instanceof NumberProperty) {
                 return p;
             }
             if (p instanceof EnumProperty) {
                 return EnumNumber.getInstance(p);
             }
-            final Number val = p.getNumber();
+            Number val = p.getNumber();
             if (val != null) {
                 return getInstance(val.doubleValue());
             }
@@ -71,16 +69,16 @@ public final class NumberProperty extends Property implements Numeric {
 
     }
 
+    /**
+     * A positive integer property maker.
+     */
     public static class PositiveIntegerMaker extends PropertyMaker {
 
         /**
          * Constructor for NumberProperty.PositiveIntegerMaker
-         *
-         * @param propId
-         *            the id of the property for which a PositiveIntegerMaker
-         *            should be created
+         * @param propId the id of the property for which a PositiveIntegerMaker should be created
          */
-        public PositiveIntegerMaker(final int propId) {
+        public PositiveIntegerMaker(int propId) {
             super(propId);
         }
 
@@ -89,14 +87,13 @@ public final class NumberProperty extends Property implements Numeric {
          *
          * {@inheritDoc}
          */
-        @Override
-        public Property convertProperty(final Property p,
-                final PropertyList propertyList, final FObj fo)
-                throws PropertyException {
+        public Property convertProperty(Property p,
+                                        PropertyList propertyList, FObj fo)
+                    throws PropertyException {
             if (p instanceof EnumProperty) {
                 return EnumNumber.getInstance(p);
             }
-            final Number val = p.getNumber();
+            Number val = p.getNumber();
             if (val != null) {
                 int i = Math.round(val.floatValue());
                 if (i <= 0) {
@@ -110,25 +107,23 @@ public final class NumberProperty extends Property implements Numeric {
     }
 
     /** cache holding all canonical NumberProperty instances */
-    private static final PropertyCache cache = new PropertyCache(
-            NumberProperty.class);
+    private static final PropertyCache<NumberProperty> CACHE
+            = new PropertyCache<NumberProperty>();
 
     private final Number number;
 
     /**
      * Constructor for double input
-     *
-     * @param num
-     *            double numeric value for property
+     * @param num double numeric value for property
      */
-    private NumberProperty(final double num) {
-        // Store the number as an int or a long,
-        // if possible
+    private NumberProperty(double num) {
+        //Store the number as an int or a long,
+        //if possible
         if (num == Math.floor(num)) {
             if (num < Integer.MAX_VALUE) {
-                this.number = (int) num;
+                this.number = new Integer((int)num);
             } else {
-                this.number = Long.valueOf((long) num);
+                this.number = new Long((long)num);
             }
         } else {
             this.number = new Double(num);
@@ -137,119 +132,95 @@ public final class NumberProperty extends Property implements Numeric {
 
     /**
      * Constructor for integer input
-     *
-     * @param num
-     *            integer numeric value for property
+     * @param num integer numeric value for property
      */
-    private NumberProperty(final int num) {
-        this.number = num;
+    private NumberProperty(int num) {
+        this.number = new Integer(num);
     }
 
     /**
-     * Returns the canonical NumberProperty instance corresponding to the given
-     * Number
-     *
-     * @param num
-     *            the base Double
-     * @return the canonical NumberProperty
+     * Returns the canonical NumberProperty instance
+     * corresponding to the given Number
+     * @param num   the base Double
+     * @return  the canonical NumberProperty
      */
-    public static NumberProperty getInstance(final Double num) {
-        return (NumberProperty) cache.fetch(new NumberProperty(num
-                .doubleValue()));
+    public static NumberProperty getInstance(Double num) {
+        return CACHE.fetch(new NumberProperty(num.doubleValue()));
     }
 
     /**
-     * Returns the canonical NumberProperty instance corresponding to the given
-     * Integer
-     *
-     * @param num
-     *            the base Integer
-     * @return the canonical NumberProperty
+     * Returns the canonical NumberProperty instance
+     * corresponding to the given Integer
+     * @param num   the base Integer
+     * @return  the canonical NumberProperty
      */
-    public static NumberProperty getInstance(final Integer num) {
-        return (NumberProperty) cache.fetch(new NumberProperty(num.intValue()));
+    public static NumberProperty getInstance(Integer num) {
+        return CACHE.fetch(new NumberProperty(num.intValue()));
     }
 
     /**
-     * Returns the canonical NumberProperty instance corresponding to the given
-     * double
-     *
-     * @param num
-     *            the base double value
-     * @return the canonical NumberProperty
+     * Returns the canonical NumberProperty instance
+     * corresponding to the given double
+     * @param num   the base double value
+     * @return  the canonical NumberProperty
      */
-    public static NumberProperty getInstance(final double num) {
-        return (NumberProperty) cache.fetch(new NumberProperty(num));
+    public static NumberProperty getInstance(double num) {
+        return CACHE.fetch(new NumberProperty(num));
     }
 
     /**
-     * Returns the canonical NumberProperty instance corresponding to the given
-     * int
-     *
-     * @param num
-     *            the base int value
-     * @return the canonical NumberProperty
+     * Returns the canonical NumberProperty instance
+     * corresponding to the given int
+     * @param num   the base int value
+     * @return  the canonical NumberProperty
      */
-    public static NumberProperty getInstance(final int num) {
-        return (NumberProperty) cache.fetch(new NumberProperty(num));
+    public static NumberProperty getInstance(int num) {
+        return CACHE.fetch(new NumberProperty(num));
     }
 
     /**
      * Plain number always has a dimension of 0.
-     *
      * @return a dimension of 0.
      */
-    @Override
     public int getDimension() {
         return 0;
     }
 
     /**
      * Return the value of this Numeric.
-     *
      * @return The value as a double.
      */
-    @Override
     public double getNumericValue() {
-        return this.number.doubleValue();
+        return number.doubleValue();
     }
 
     /**
      * Return the value of this Numeric.
-     *
-     * @param context
-     *            Evaluation context
+     * @param context Evaluation context
      * @return The value as a double.
      */
-    @Override
-    public double getNumericValue(final PercentBaseContext context) {
+    public double getNumericValue(PercentBaseContext context) {
         return getNumericValue();
     }
 
     /** {@inheritDoc} */
-    @Override
     public int getValue() {
-        return this.number.intValue();
+        return number.intValue();
     }
 
     /**
      * Return the value
-     *
-     * @param context
-     *            Evaluation context
+     * @param context Evaluation context
      * @return The value as an int.
      */
-    @Override
-    public int getValue(final PercentBaseContext context) {
+    public int getValue(PercentBaseContext context) {
         return getValue();
     }
 
     /**
      * Return true because all numbers are absolute.
-     *
      * @return true.
      */
-    @Override
     public boolean isAbsolute() {
         return true;
     }
@@ -257,7 +228,6 @@ public final class NumberProperty extends Property implements Numeric {
     /**
      * @return this.number cast as a Number
      */
-    @Override
     public Number getNumber() {
         return this.number;
     }
@@ -265,37 +235,30 @@ public final class NumberProperty extends Property implements Numeric {
     /**
      * @return this.number cast as an Object
      */
-    @Override
     public Object getObject() {
         return this.number;
     }
 
     /**
      * Convert NumberProperty to Numeric object
-     *
      * @return Numeric object corresponding to this
      */
-    @Override
     public Numeric getNumeric() {
         return this;
     }
 
     /** {@inheritDoc} */
-    @Override
     public Length getLength() {
-        // Assume pixels (like in HTML) when there's no unit
+        //Assume pixels (like in HTML) when there's no unit
         return FixedLength.getInstance(getNumericValue(), "px");
     }
 
     /**
      * Convert NumberProperty to a Color. Not sure why this is needed.
-     *
-     * @param foUserAgent
-     *            FOUserAgent
+     * @param foUserAgent FOUserAgent
      * @return Color that corresponds to black
      */
-    @Override
-    public Color getColor(final FOUserAgent foUserAgent) {
+    public Color getColor(FOUserAgent foUserAgent) {
         // TODO: Implement somehow
         // Convert numeric value to color ???
         // Convert to hexadecimal and then try to make it into a color?
@@ -304,21 +267,20 @@ public final class NumberProperty extends Property implements Numeric {
 
     /** {@inheritDoc} */
     @Override
-    public int hashCode() {
-        return this.number.hashCode();
+    public boolean equals(Object obj) {
+        if (this == obj) {
+            return true;
+        }
+        if (!(obj instanceof NumberProperty)) {
+            return false;
+        }
+        NumberProperty other = (NumberProperty) obj;
+        return CompareUtil.equal(number, other.number);
     }
 
     /** {@inheritDoc} */
     @Override
-    public boolean equals(final Object o) {
-        if (o == this) {
-            return true;
-        }
-        if (o instanceof NumberProperty) {
-            final NumberProperty np = (NumberProperty) o;
-            return np.number == this.number || this.number != null
-                    && this.number.equals(np.number);
-        }
-        return false;
+    public int hashCode() {
+        return number.hashCode();
     }
 }
