@@ -15,28 +15,31 @@
  * limitations under the License.
  */
 
-/* $Id: Typeface.java 721430 2008-11-28 11:13:12Z acumiskey $ */
+/* $Id: Typeface.java 1296526 2012-03-03 00:18:45Z gadams $ */
 
 package org.apache.fop.fonts;
 
-import java.util.Collection;
 import java.util.HashSet;
+import java.util.Set;
 
-import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 
 import org.apache.xmlgraphics.fonts.Glyphs;
 
 /**
  * Base class for font classes
  */
-@Slf4j
-public abstract class Typeface<T, U> implements FontMetrics<T, U> {
+public abstract class Typeface implements FontMetrics {
 
     /**
      * Code point that is used if no code point for a specific character has
      * been found.
      */
     public static final char NOT_FOUND = '#';
+
+    /** logger */
+    private static Log log = LogFactory.getLog(Typeface.class);
 
     /**
      * Used to identify whether a font has been used (a character map operation
@@ -45,61 +48,50 @@ public abstract class Typeface<T, U> implements FontMetrics<T, U> {
      */
     private long charMapOps = 0;
 
-    /**
-     * An optional event listener that receives events such as missing glyphs
-     * etc.
-     */
+    /** An optional event listener that receives events such as missing glyphs etc. */
     protected FontEventListener eventListener;
 
-    private Collection<Character> warnedChars;
+    private Set<Character> warnedChars;
 
     /**
      * Get the encoding of the font.
-     *
      * @return the encoding
      */
     public abstract String getEncodingName();
 
     /**
      * Map a Unicode character to a code point in the font.
-     *
-     * @param c
-     *            character to map
+     * @param c character to map
      * @return the mapped character
      */
-    public abstract char mapChar(final char c);
+    public abstract char mapChar(char c);
 
     /**
-     * Used for keeping track of character mapping operations in order to
-     * determine if a font was used at all or not.
+     * Used for keeping track of character mapping operations in order to determine if a font
+     * was used at all or not.
      */
     protected void notifyMapOperation() {
         this.charMapOps++;
     }
 
     /**
-     * Indicates whether this font had to do any character mapping operations.
-     * If that was not the case, it's an indication that the font has never
-     * actually been used.
-     *
+     * Indicates whether this font had to do any character mapping operations. If that was
+     * not the case, it's an indication that the font has never actually been used.
      * @return true if the font had to do any character mapping operations
      */
     public boolean hadMappingOperations() {
-        return this.charMapOps > 0;
+        return (this.charMapOps > 0);
     }
 
     /**
      * Determines whether this font contains a particular character/glyph.
-     *
-     * @param c
-     *            character to check
+     * @param c character to check
      * @return True if the character is supported, Falso otherwise
      */
-    public abstract boolean hasChar(final char c);
+    public abstract boolean hasChar(char c);
 
     /**
      * Determines whether the font is a multibyte font.
-     *
      * @return True if it is multibyte
      */
     public boolean isMultiByte() {
@@ -107,19 +99,16 @@ public abstract class Typeface<T, U> implements FontMetrics<T, U> {
     }
 
     /** {@inheritDoc} */
-    @Override
-    public int getMaxAscent(final int size) {
+    public int getMaxAscent(int size) {
         return getAscender(size);
     }
 
     /**
-     * Sets the font event listener that can be used to receive events about
-     * particular events in this class.
-     *
-     * @param listener
-     *            the font event listener
+     * Sets the font event listener that can be used to receive events about particular events
+     * in this class.
+     * @param listener the font event listener
      */
-    public void setEventListener(final FontEventListener listener) {
+    public void setEventListener(FontEventListener listener) {
         this.eventListener = listener;
     }
 
@@ -129,18 +118,18 @@ public abstract class Typeface<T, U> implements FontMetrics<T, U> {
      * @param c
      *            the character which is missing.
      */
-    protected void warnMissingGlyph(final char c) {
+    protected void warnMissingGlyph(char c) {
         // Give up, character is not available
-        final Character ch = Character.valueOf(c);
-        if (this.warnedChars == null) {
-            this.warnedChars = new HashSet<>();
+        Character ch = new Character(c);
+        if (warnedChars == null) {
+            warnedChars = new HashSet<Character>();
         }
-        if (this.warnedChars.size() < 8 && !this.warnedChars.contains(ch)) {
-            this.warnedChars.add(ch);
+        if (warnedChars.size() < 8 && !warnedChars.contains(ch)) {
+            warnedChars.add(ch);
             if (this.eventListener != null) {
                 this.eventListener.glyphNotAvailable(this, c, getFontName());
             } else {
-                if (this.warnedChars.size() == 8) {
+                if (warnedChars.size() == 8) {
                     log.warn("Many requested glyphs are not available in font "
                             + getFontName());
                 } else {
@@ -154,8 +143,11 @@ public abstract class Typeface<T, U> implements FontMetrics<T, U> {
     }
 
     /** {@inheritDoc} */
-    @Override
     public String toString() {
-        return getFullName();
+        StringBuffer sbuf = new StringBuffer(super.toString());
+        sbuf.append('{');
+        sbuf.append(getFullName());
+        sbuf.append('}');
+        return sbuf.toString();
     }
 }
