@@ -15,7 +15,7 @@
  * limitations under the License.
  */
 
-/* $Id: PSDocumentHandler.java 820672 2009-10-01 14:48:27Z jeremias $ */
+/* $Id: PSDocumentHandler.java 1357883 2012-07-05 20:29:53Z gadams $ */
 
 package org.apache.fop.render.ps;
 
@@ -28,27 +28,15 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Date;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import javax.xml.transform.Source;
 
-import lombok.extern.slf4j.Slf4j;
-
 import org.apache.commons.io.IOUtils;
-import org.apache.fop.render.intermediate.AbstractBinaryWritingIFDocumentHandler;
-import org.apache.fop.render.intermediate.IFContext;
-import org.apache.fop.render.intermediate.IFDocumentHandler;
-import org.apache.fop.render.intermediate.IFDocumentHandlerConfigurator;
-import org.apache.fop.render.intermediate.IFException;
-import org.apache.fop.render.intermediate.IFPainter;
-import org.apache.fop.render.ps.extensions.PSCommentAfter;
-import org.apache.fop.render.ps.extensions.PSCommentBefore;
-import org.apache.fop.render.ps.extensions.PSExtensionAttachment;
-import org.apache.fop.render.ps.extensions.PSSetPageDevice;
-import org.apache.fop.render.ps.extensions.PSSetupCode;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
+
 import org.apache.xmlgraphics.java2d.Dimension2DDouble;
 import org.apache.xmlgraphics.ps.DSCConstants;
 import org.apache.xmlgraphics.ps.PSDictionary;
@@ -62,15 +50,31 @@ import org.apache.xmlgraphics.ps.dsc.ResourceTracker;
 import org.apache.xmlgraphics.ps.dsc.events.DSCCommentBoundingBox;
 import org.apache.xmlgraphics.ps.dsc.events.DSCCommentHiResBoundingBox;
 
+import org.apache.fop.apps.FOUserAgent;
+import org.apache.fop.apps.MimeConstants;
+import org.apache.fop.render.intermediate.AbstractBinaryWritingIFDocumentHandler;
+import org.apache.fop.render.intermediate.IFContext;
+import org.apache.fop.render.intermediate.IFDocumentHandlerConfigurator;
+import org.apache.fop.render.intermediate.IFException;
+import org.apache.fop.render.intermediate.IFPainter;
+import org.apache.fop.render.ps.extensions.PSCommentAfter;
+import org.apache.fop.render.ps.extensions.PSCommentBefore;
+import org.apache.fop.render.ps.extensions.PSPageTrailerCodeBefore;
+import org.apache.fop.render.ps.extensions.PSSetPageDevice;
+import org.apache.fop.render.ps.extensions.PSSetupCode;
+
 /**
- * {@link IFDocumentHandler} implementation that produces PostScript.
+ * {@link org.apache.fop.render.intermediate.IFDocumentHandler} implementation
+ * that produces PostScript.
  */
-@Slf4j
 public class PSDocumentHandler extends AbstractBinaryWritingIFDocumentHandler {
 
+    /** logging instance */
+    private static Log log = LogFactory.getLog(PSDocumentHandler.class);
+
     /**
-     * Utility class which enables all sorts of features that are not directly
-     * connected to the normal rendering process.
+     * Utility class which enables all sorts of features that are not directly connected to the
+     * normal rendering process.
      */
     protected PSRenderingUtil psUtil;
 
@@ -86,24 +90,25 @@ public class PSDocumentHandler extends AbstractBinaryWritingIFDocumentHandler {
     /** Is used to determine the document's bounding box */
     private Rectangle2D documentBoundingBox;
 
-    /**
-     * Used to temporarily store PSSetupCode instance until they can be written.
-     */
-    private List<PSSetupCode> setupCodeList;
+    /** Used to temporarily store PSSetupCode instance until they can be written. */
+    private List setupCodeList;
 
     /** This is a cache of PSResource instances of all fonts defined */
     private FontResourceCache fontResources;
     /** This is a map of PSResource instances of all forms (key: uri) */
-    private Map<String, PSResource> formResources;
+    private Map formResources;
 
     /** encapsulation of dictionary used in setpagedevice instruction **/
     private PSPageDeviceDictionary pageDeviceDictionary;
 
     /** This is a collection holding all document header comments */
-    private final Collection<PSExtensionAttachment>[] comments = new Collection[3];
+    private Collection[] comments = new Collection[4];
     private static final int COMMENT_DOCUMENT_HEADER = 0;
     private static final int COMMENT_DOCUMENT_TRAILER = 1;
     private static final int COMMENT_PAGE_TRAILER = 2;
+    private static final int PAGE_TRAILER_CODE_BEFORE = 3;
+
+    private PSEventProducer eventProducer;
 
     /**
      * Default constructor.
@@ -112,26 +117,24 @@ public class PSDocumentHandler extends AbstractBinaryWritingIFDocumentHandler {
     }
 
     /** {@inheritDoc} */
-    @Override
     public boolean supportsPagesOutOfOrder() {
         return false;
     }
 
     /** {@inheritDoc} */
-    @Override
     public String getMimeType() {
-        return org.apache.xmlgraphics.util.MimeConstants.MIME_POSTSCRIPT;
+        return MimeConstants.MIME_POSTSCRIPT;
     }
 
     /** {@inheritDoc} */
-    @Override
-    public void setContext(final IFContext context) {
+    public void setContext(IFContext context) {
         super.setContext(context);
-        this.psUtil = new PSRenderingUtil(context.getUserAgent());
+        FOUserAgent userAgent = context.getUserAgent();
+        this.psUtil = new PSRenderingUtil(userAgent);
+        eventProducer = PSEventProducer.Provider.get(userAgent.getEventBroadcaster());
     }
 
     /** {@inheritDoc} */
-    @Override
     public IFDocumentHandlerConfigurator getConfigurator() {
         return new PSRendererConfigurator(getUserAgent());
     }
@@ -141,151 +144,131 @@ public class PSDocumentHandler extends AbstractBinaryWritingIFDocumentHandler {
     }
 
     /** {@inheritDoc} */
-    @Override
     public void startDocument() throws IFException {
         super.startDocument();
         this.fontResources = new FontResourceCache(getFontInfo());
         try {
             OutputStream out;
-            if (this.psUtil.isOptimizeResources()) {
-                this.tempFile = File.createTempFile("fop", null);
+            if (psUtil.isOptimizeResources()) {
+                this.tempFile = File.createTempFile("fop", ".ps");
                 out = new java.io.FileOutputStream(this.tempFile);
                 out = new java.io.BufferedOutputStream(out);
             } else {
                 out = this.outputStream;
             }
 
-            // Setup for PostScript generation
+            //Setup for PostScript generation
             this.gen = new PSGenerator(out) {
                 /** Need to subclass PSGenerator to have better URI resolution */
-                @Override
-                public Source resolveURI(final String uri) {
+                public Source resolveURI(String uri) {
                     return getUserAgent().resolveURI(uri);
                 }
             };
-            this.gen.setPSLevel(this.psUtil.getLanguageLevel());
+            this.gen.setPSLevel(psUtil.getLanguageLevel());
             this.currentPageNumber = 0;
             this.documentBoundingBox = new Rectangle2D.Double();
 
-            // Initial default page device dictionary settings
+            //Initial default page device dictionary settings
             this.pageDeviceDictionary = new PSPageDeviceDictionary();
-            this.pageDeviceDictionary.setFlushOnRetrieval(!this.psUtil
-                    .isDSCComplianceEnabled());
-            this.pageDeviceDictionary.put("/ImagingBBox", "null");
-        } catch (final IOException e) {
+            pageDeviceDictionary.setFlushOnRetrieval(!psUtil.isDSCComplianceEnabled());
+            pageDeviceDictionary.put("/ImagingBBox", "null");
+        } catch (IOException e) {
             throw new IFException("I/O error in startDocument()", e);
         }
     }
 
     private void writeHeader() throws IOException {
-        // PostScript Header
-        this.gen.writeln(DSCConstants.PS_ADOBE_30);
-        this.gen.writeDSCComment(DSCConstants.CREATOR,
-                new String[] { getUserAgent().getProducer() });
-        this.gen.writeDSCComment(DSCConstants.CREATION_DATE,
-                new Object[] { new Date() });
-        this.gen.writeDSCComment(DSCConstants.LANGUAGE_LEVEL,
-                this.gen.getPSLevel());
-        this.gen.writeDSCComment(DSCConstants.PAGES,
-                new Object[] { DSCConstants.ATEND });
-        this.gen.writeDSCComment(DSCConstants.BBOX, DSCConstants.ATEND);
-        this.gen.writeDSCComment(DSCConstants.HIRES_BBOX, DSCConstants.ATEND);
-        this.gen.writeDSCComment(DSCConstants.DOCUMENT_SUPPLIED_RESOURCES,
-                new Object[] { DSCConstants.ATEND });
+        //PostScript Header
+        gen.writeln(DSCConstants.PS_ADOBE_30);
+        gen.writeDSCComment(DSCConstants.CREATOR, new String[] {getUserAgent().getProducer()});
+        gen.writeDSCComment(DSCConstants.CREATION_DATE, new Object[] {new java.util.Date()});
+        gen.writeDSCComment(DSCConstants.LANGUAGE_LEVEL, new Integer(gen.getPSLevel()));
+        gen.writeDSCComment(DSCConstants.PAGES, new Object[] {DSCConstants.ATEND});
+        gen.writeDSCComment(DSCConstants.BBOX, DSCConstants.ATEND);
+        gen.writeDSCComment(DSCConstants.HIRES_BBOX, DSCConstants.ATEND);
+        gen.writeDSCComment(DSCConstants.DOCUMENT_SUPPLIED_RESOURCES,
+                new Object[] {DSCConstants.ATEND});
         writeExtensions(COMMENT_DOCUMENT_HEADER);
-        this.gen.writeDSCComment(DSCConstants.END_COMMENTS);
+        gen.writeDSCComment(DSCConstants.END_COMMENTS);
 
-        // Defaults
-        this.gen.writeDSCComment(DSCConstants.BEGIN_DEFAULTS);
-        this.gen.writeDSCComment(DSCConstants.END_DEFAULTS);
+        //Defaults
+        gen.writeDSCComment(DSCConstants.BEGIN_DEFAULTS);
+        gen.writeDSCComment(DSCConstants.END_DEFAULTS);
 
-        // Prolog and Setup written right before the first page-sequence, see
-        // startPageSequence()
-        // Do this only once, as soon as we have all the content for the Setup
-        // section!
-        // Prolog
-        this.gen.writeDSCComment(DSCConstants.BEGIN_PROLOG);
-        PSProcSets.writeStdProcSet(this.gen);
-        PSProcSets.writeEPSProcSet(this.gen);
-        FOPProcSet.INSTANCE.writeTo(this.gen);
-        this.gen.writeDSCComment(DSCConstants.END_PROLOG);
+        //Prolog and Setup written right before the first page-sequence, see startPageSequence()
+        //Do this only once, as soon as we have all the content for the Setup section!
+        //Prolog
+        gen.writeDSCComment(DSCConstants.BEGIN_PROLOG);
+        PSProcSets.writeStdProcSet(gen);
+        PSProcSets.writeEPSProcSet(gen);
+        FOPProcSet.INSTANCE.writeTo(gen);
+        gen.writeDSCComment(DSCConstants.END_PROLOG);
 
-        // Setup
-        this.gen.writeDSCComment(DSCConstants.BEGIN_SETUP);
-        PSRenderingUtil.writeSetupCodeList(this.gen, this.setupCodeList,
-                "SetupCode");
-        if (!this.psUtil.isOptimizeResources()) {
-            this.fontResources.addAll(PSFontUtils.writeFontDict(this.gen,
-                    this.fontInfo));
+        //Setup
+        gen.writeDSCComment(DSCConstants.BEGIN_SETUP);
+        PSRenderingUtil.writeSetupCodeList(gen, setupCodeList, "SetupCode");
+        if (!psUtil.isOptimizeResources()) {
+            this.fontResources.addAll(PSFontUtils.writeFontDict(gen, fontInfo, eventProducer));
         } else {
-            this.gen.commentln("%FOPFontSetup"); // Place-holder, will be
-            // replaced in the second pass
+            gen.commentln("%FOPFontSetup"); //Place-holder, will be replaced in the second pass
         }
-        this.gen.writeDSCComment(DSCConstants.END_SETUP);
+        gen.writeDSCComment(DSCConstants.END_SETUP);
     }
 
     /** {@inheritDoc} */
-    @Override
     public void endDocumentHeader() throws IFException {
         try {
             writeHeader();
-        } catch (final IOException ioe) {
-            throw new IFException("I/O error writing the PostScript header",
-                    ioe);
+        } catch (IOException ioe) {
+            throw new IFException("I/O error writing the PostScript header", ioe);
         }
     }
 
     /** {@inheritDoc} */
-    @Override
     public void endDocument() throws IFException {
         try {
-            // Write trailer
-            this.gen.writeDSCComment(DSCConstants.TRAILER);
+            //Write trailer
+            gen.writeDSCComment(DSCConstants.TRAILER);
             writeExtensions(COMMENT_DOCUMENT_TRAILER);
-            this.gen.writeDSCComment(DSCConstants.PAGES, this.currentPageNumber);
-            new DSCCommentBoundingBox(this.documentBoundingBox)
-                    .generate(this.gen);
-            new DSCCommentHiResBoundingBox(this.documentBoundingBox)
-                    .generate(this.gen);
-            this.gen.getResourceTracker().writeResources(false, this.gen);
-            this.gen.writeDSCComment(DSCConstants.EOF);
-            this.gen.flush();
+            gen.writeDSCComment(DSCConstants.PAGES, new Integer(this.currentPageNumber));
+            new DSCCommentBoundingBox(this.documentBoundingBox).generate(gen);
+            new DSCCommentHiResBoundingBox(this.documentBoundingBox).generate(gen);
+            gen.getResourceTracker().writeResources(false, gen);
+            gen.writeDSCComment(DSCConstants.EOF);
+            gen.flush();
             log.debug("Rendering to PostScript complete.");
-            if (this.psUtil.isOptimizeResources()) {
-                IOUtils.closeQuietly(this.gen.getOutputStream());
+            if (psUtil.isOptimizeResources()) {
+                IOUtils.closeQuietly(gen.getOutputStream());
                 rewritePostScriptFile();
             }
-            if (this.pageDeviceDictionary != null) {
-                this.pageDeviceDictionary.clear();
+            if (pageDeviceDictionary != null) {
+                pageDeviceDictionary.clear();
             }
-        } catch (final IOException ioe) {
+        } catch (IOException ioe) {
             throw new IFException("I/O error in endDocument()", ioe);
         }
         super.endDocument();
     }
 
     /**
-     * Used for two-pass production. This will rewrite the PostScript file from
-     * the temporary file while adding all needed resources.
-     *
-     * @throws IOException
-     *             In case of an I/O error.
+     * Used for two-pass production. This will rewrite the PostScript file from the temporary
+     * file while adding all needed resources.
+     * @throws IOException In case of an I/O error.
      */
     private void rewritePostScriptFile() throws IOException {
         log.debug("Processing PostScript resources...");
-        final long startTime = System.currentTimeMillis();
-        final ResourceTracker resTracker = this.gen.getResourceTracker();
+        long startTime = System.currentTimeMillis();
+        ResourceTracker resTracker = gen.getResourceTracker();
         InputStream in = new java.io.FileInputStream(this.tempFile);
         in = new java.io.BufferedInputStream(in);
         try {
             try {
-                final ResourceHandler handler = new ResourceHandler(
-                        getUserAgent(), this.fontInfo, resTracker,
-                        this.formResources);
-                handler.process(in, this.outputStream, this.currentPageNumber,
-                        this.documentBoundingBox);
+                ResourceHandler handler = new ResourceHandler(getUserAgent(), eventProducer,
+                        this.fontInfo, resTracker, this.formResources);
+                handler.process(in, this.outputStream,
+                        this.currentPageNumber, this.documentBoundingBox);
                 this.outputStream.flush();
-            } catch (final DSCException e) {
+            } catch (DSCException e) {
                 throw new RuntimeException(e.getMessage());
             }
         } finally {
@@ -296,214 +279,203 @@ public class PSDocumentHandler extends AbstractBinaryWritingIFDocumentHandler {
             }
         }
         if (log.isDebugEnabled()) {
-            final long duration = System.currentTimeMillis() - startTime;
+            long duration = System.currentTimeMillis() - startTime;
             log.debug("Resource Processing complete in " + duration + " ms.");
         }
     }
 
     /** {@inheritDoc} */
-    @Override
-    public void startPageSequence(final String id) throws IFException {
-        // nop
+    public void startPageSequence(String id) throws IFException {
+        //nop
     }
 
     /** {@inheritDoc} */
-    @Override
     public void endPageSequence() throws IFException {
-        // nop
+        //nop
     }
 
     /** {@inheritDoc} */
-    @Override
-    public void startPage(final int index, final String name,
-            final String pageMasterName, final Dimension size)
-            throws IFException {
+    public void startPage(int index, String name, String pageMasterName, Dimension size)
+                throws IFException {
         try {
             if (this.currentPageNumber == 0) {
-                // writeHeader();
+                //writeHeader();
             }
 
             this.currentPageNumber++;
 
-            this.gen.getResourceTracker().notifyStartNewPage();
-            this.gen.getResourceTracker().notifyResourceUsageOnPage(
-                    PSProcSets.STD_PROCSET);
-            this.gen.writeDSCComment(DSCConstants.PAGE, new Object[] { name,
-                    this.currentPageNumber });
+            gen.getResourceTracker().notifyStartNewPage();
+            gen.getResourceTracker().notifyResourceUsageOnPage(PSProcSets.STD_PROCSET);
+            gen.writeDSCComment(DSCConstants.PAGE, new Object[]
+                    {name,
+                     new Integer(this.currentPageNumber)});
 
-            final double pageWidth = size.width / 1000.0;
-            final double pageHeight = size.height / 1000.0;
+            double pageWidth = size.width / 1000.0;
+            double pageHeight = size.height / 1000.0;
             boolean rotate = false;
-            final List<Long> pageSizes = new ArrayList<>();
-            if (this.psUtil.isAutoRotateLandscape() && pageHeight < pageWidth) {
+            List pageSizes = new java.util.ArrayList();
+            if (this.psUtil.isAutoRotateLandscape() && (pageHeight < pageWidth)) {
                 rotate = true;
-                pageSizes.add(Long.valueOf(Math.round(pageHeight)));
-                pageSizes.add(Long.valueOf(Math.round(pageWidth)));
+                pageSizes.add(new Long(Math.round(pageHeight)));
+                pageSizes.add(new Long(Math.round(pageWidth)));
             } else {
-                pageSizes.add(Long.valueOf(Math.round(pageWidth)));
-                pageSizes.add(Long.valueOf(Math.round(pageHeight)));
+                pageSizes.add(new Long(Math.round(pageWidth)));
+                pageSizes.add(new Long(Math.round(pageHeight)));
             }
-            this.pageDeviceDictionary.put("/PageSize", pageSizes);
+            pageDeviceDictionary.put("/PageSize", pageSizes);
             this.currentPageDefinition = new PageDefinition(
                     new Dimension2DDouble(pageWidth, pageHeight), rotate);
 
-            // TODO Handle extension attachments for the page!!!!!!!
+            //TODO Handle extension attachments for the page!!!!!!!
             /*
-             * if (page.hasExtensionAttachments()) { for (Iterator iter =
-             * page.getExtensionAttachments().iterator(); iter.hasNext();) {
-             * ExtensionAttachment attachment = (ExtensionAttachment)
-             * iter.next(); if (attachment instanceof PSSetPageDevice) {
-             */
-            /**
-             * Extract all PSSetPageDevice instances from the attachment list on
-             * the s-p-m and add all dictionary entries to our internal
-             * representation of the the page device dictionary.
-             */
-            /*
-             * PSSetPageDevice setPageDevice = (PSSetPageDevice)attachment;
-             * String content = setPageDevice.getContent(); if (content != null)
-             * { try {
-             * pageDeviceDictionary.putAll(PSDictionary.valueOf(content)); }
-             * catch (PSDictionaryFormatException e) { PSEventProducer
-             * eventProducer = PSEventProducer.Provider.get(
-             * getUserAgent().getEventBroadcaster());
-             * eventProducer.postscriptDictionaryParseError(this, content, e); }
-             * } } } }
-             */
+            if (page.hasExtensionAttachments()) {
+                for (Iterator iter = page.getExtensionAttachments().iterator();
+                    iter.hasNext();) {
+                    ExtensionAttachment attachment = (ExtensionAttachment) iter.next();
+                    if (attachment instanceof PSSetPageDevice) {*/
+                        /**
+                         * Extract all PSSetPageDevice instances from the
+                         * attachment list on the s-p-m and add all
+                         * dictionary entries to our internal representation
+                         * of the the page device dictionary.
+                         *//*
+                        PSSetPageDevice setPageDevice = (PSSetPageDevice)attachment;
+                        String content = setPageDevice.getContent();
+                        if (content != null) {
+                            try {
+                                pageDeviceDictionary.putAll(PSDictionary.valueOf(content));
+                            } catch (PSDictionaryFormatException e) {
+                                PSEventProducer eventProducer = PSEventProducer.Provider.get(
+                                        getUserAgent().getEventBroadcaster());
+                                eventProducer.postscriptDictionaryParseError(this, content, e);
+                            }
+                        }
+                    }
+                }
+            }*/
 
-            final Integer zero = 0;
-            final Rectangle2D pageBoundingBox = new Rectangle2D.Double();
+            final Integer zero = new Integer(0);
+            Rectangle2D pageBoundingBox = new Rectangle2D.Double();
             if (rotate) {
                 pageBoundingBox.setRect(0, 0, pageHeight, pageWidth);
-                this.gen.writeDSCComment(DSCConstants.PAGE_BBOX, new Object[] {
-                        zero, zero, Long.valueOf(Math.round(pageHeight)),
-                        Long.valueOf(Math.round(pageWidth)) });
-                this.gen.writeDSCComment(DSCConstants.PAGE_HIRES_BBOX,
-                        new Object[] { zero, zero, new Double(pageHeight),
-                                new Double(pageWidth) });
-                this.gen.writeDSCComment(DSCConstants.PAGE_ORIENTATION,
-                        "Landscape");
+                gen.writeDSCComment(DSCConstants.PAGE_BBOX, new Object[] {
+                        zero, zero, new Long(Math.round(pageHeight)),
+                        new Long(Math.round(pageWidth)) });
+                gen.writeDSCComment(DSCConstants.PAGE_HIRES_BBOX, new Object[] {
+                        zero, zero, new Double(pageHeight),
+                        new Double(pageWidth) });
+                gen.writeDSCComment(DSCConstants.PAGE_ORIENTATION, "Landscape");
             } else {
                 pageBoundingBox.setRect(0, 0, pageWidth, pageHeight);
-                this.gen.writeDSCComment(DSCConstants.PAGE_BBOX, new Object[] {
-                        zero, zero, Long.valueOf(Math.round(pageWidth)),
-                        Long.valueOf(Math.round(pageHeight)) });
-                this.gen.writeDSCComment(DSCConstants.PAGE_HIRES_BBOX,
-                        new Object[] { zero, zero, new Double(pageWidth),
-                                new Double(pageHeight) });
-                if (this.psUtil.isAutoRotateLandscape()) {
-                    this.gen.writeDSCComment(DSCConstants.PAGE_ORIENTATION,
+                gen.writeDSCComment(DSCConstants.PAGE_BBOX, new Object[] {
+                        zero, zero, new Long(Math.round(pageWidth)),
+                        new Long(Math.round(pageHeight)) });
+                gen.writeDSCComment(DSCConstants.PAGE_HIRES_BBOX, new Object[] {
+                        zero, zero, new Double(pageWidth),
+                        new Double(pageHeight) });
+                if (psUtil.isAutoRotateLandscape()) {
+                    gen.writeDSCComment(DSCConstants.PAGE_ORIENTATION,
                             "Portrait");
                 }
             }
             this.documentBoundingBox.add(pageBoundingBox);
-            this.gen.writeDSCComment(DSCConstants.PAGE_RESOURCES,
-                    new Object[] { DSCConstants.ATEND });
+            gen.writeDSCComment(DSCConstants.PAGE_RESOURCES,
+                    new Object[] {DSCConstants.ATEND});
 
-            this.gen.commentln("%FOPSimplePageMaster: " + pageMasterName);
-        } catch (final IOException ioe) {
+            gen.commentln("%FOPSimplePageMaster: " + pageMasterName);
+        } catch (IOException ioe) {
             throw new IFException("I/O error in startPage()", ioe);
         }
     }
 
     /** {@inheritDoc} */
-    @Override
     public void startPageHeader() throws IFException {
         super.startPageHeader();
 
         try {
-            this.gen.writeDSCComment(DSCConstants.BEGIN_PAGE_SETUP);
-        } catch (final IOException ioe) {
+            gen.writeDSCComment(DSCConstants.BEGIN_PAGE_SETUP);
+        } catch (IOException ioe) {
             throw new IFException("I/O error in startPageHeader()", ioe);
         }
     }
 
     /** {@inheritDoc} */
-    @Override
     public void endPageHeader() throws IFException {
         try {
             // Write any unwritten changes to page device dictionary
-            if (!this.pageDeviceDictionary.isEmpty()) {
-                String content = this.pageDeviceDictionary.getContent();
-                if (this.psUtil.isSafeSetPageDevice()) {
+            if (!pageDeviceDictionary.isEmpty()) {
+                String content = pageDeviceDictionary.getContent();
+                if (psUtil.isSafeSetPageDevice()) {
                     content += " SSPD";
                 } else {
                     content += " setpagedevice";
                 }
-                PSRenderingUtil.writeEnclosedExtensionAttachment(this.gen,
-                        new PSSetPageDevice(content));
+                PSRenderingUtil.writeEnclosedExtensionAttachment(gen, new PSSetPageDevice(content));
             }
 
-            final double pageHeight = this.currentPageDefinition.dimensions
-                    .getHeight();
+            double pageHeight = this.currentPageDefinition.dimensions.getHeight();
             if (this.currentPageDefinition.rotate) {
-                this.gen.writeln(this.gen.formatDouble(pageHeight)
-                        + " 0 translate");
-                this.gen.writeln("90 rotate");
+                gen.writeln(gen.formatDouble(pageHeight) + " 0 translate");
+                gen.writeln("90 rotate");
             }
-            this.gen.concatMatrix(1, 0, 0, -1, 0, pageHeight);
+            gen.concatMatrix(1, 0, 0, -1, 0, pageHeight);
 
-            this.gen.writeDSCComment(DSCConstants.END_PAGE_SETUP);
-        } catch (final IOException ioe) {
+            gen.writeDSCComment(DSCConstants.END_PAGE_SETUP);
+        } catch (IOException ioe) {
             throw new IFException("I/O error in endPageHeader()", ioe);
         }
 
         super.endPageHeader();
     }
 
-    private void writeExtensions(final int which) throws IOException {
-        final Collection<PSExtensionAttachment> extensions = this.comments[which];
+    private void writeExtensions(int which) throws IOException {
+        Collection extensions = comments[which];
         if (extensions != null) {
-            PSRenderingUtil.writeEnclosedExtensionAttachments(this.gen,
-                    extensions);
+            PSRenderingUtil.writeEnclosedExtensionAttachments(gen, extensions);
             extensions.clear();
         }
     }
 
     /** {@inheritDoc} */
-    @Override
     public IFPainter startPageContent() throws IFException {
         return new PSPainter(this);
     }
 
     /** {@inheritDoc} */
-    @Override
     public void endPageContent() throws IFException {
         try {
-            this.gen.showPage();
-        } catch (final IOException ioe) {
+            gen.showPage();
+        } catch (IOException ioe) {
             throw new IFException("I/O error in endPageContent()", ioe);
         }
     }
 
     /** {@inheritDoc} */
-    @Override
     public void startPageTrailer() throws IFException {
-        super.startPageTrailer();
         try {
-            this.gen.writeDSCComment(DSCConstants.PAGE_TRAILER);
-        } catch (final IOException ioe) {
+            writeExtensions(PAGE_TRAILER_CODE_BEFORE);
+            super.startPageTrailer();
+            gen.writeDSCComment(DSCConstants.PAGE_TRAILER);
+        } catch (IOException ioe) {
             throw new IFException("I/O error in startPageTrailer()", ioe);
         }
     }
 
     /** {@inheritDoc} */
-    @Override
     public void endPageTrailer() throws IFException {
         try {
             writeExtensions(COMMENT_PAGE_TRAILER);
-        } catch (final IOException ioe) {
+        } catch (IOException ioe) {
             throw new IFException("I/O error in endPageTrailer()", ioe);
         }
         super.endPageTrailer();
     }
 
     /** {@inheritDoc} */
-    @Override
     public void endPage() throws IFException {
         try {
-            this.gen.getResourceTracker().writeResources(true, this.gen);
-        } catch (final IOException ioe) {
+            gen.getResourceTracker().writeResources(true, gen);
+        } catch (IOException ioe) {
             throw new IFException("I/O error in endPage()", ioe);
         }
 
@@ -515,94 +487,88 @@ public class PSDocumentHandler extends AbstractBinaryWritingIFDocumentHandler {
     }
 
     /** {@inheritDoc} */
-    @Override
-    public void handleExtensionObject(final Object extension)
-            throws IFException {
+    public void handleExtensionObject(Object extension) throws IFException {
         try {
             if (extension instanceof PSSetupCode) {
                 if (inPage()) {
-                    PSRenderingUtil.writeEnclosedExtensionAttachment(this.gen,
-                            (PSSetupCode) extension);
+                    PSRenderingUtil.writeEnclosedExtensionAttachment(gen, (PSSetupCode)extension);
                 } else {
-                    // A special collection for setup code as it's put in a
-                    // different place
-                    // than the "before comments".
-                    if (this.setupCodeList == null) {
-                        this.setupCodeList = new ArrayList<>();
+                    //A special collection for setup code as it's put in a different place
+                    //than the "before comments".
+                    if (setupCodeList == null) {
+                        setupCodeList = new java.util.ArrayList();
                     }
-                    if (!this.setupCodeList.contains(extension)) {
-                        this.setupCodeList.add((PSSetupCode) extension);
+                    if (!setupCodeList.contains(extension)) {
+                        setupCodeList.add(extension);
                     }
                 }
             } else if (extension instanceof PSSetPageDevice) {
                 /**
-                 * Extract all PSSetPageDevice instances from the attachment
-                 * list on the s-p-m and add all dictionary entries to our
-                 * internal representation of the the page device dictionary.
+                 * Extract all PSSetPageDevice instances from the
+                 * attachment list on the s-p-m and add all dictionary
+                 * entries to our internal representation of the the
+                 * page device dictionary.
                  */
-                final PSSetPageDevice setPageDevice = (PSSetPageDevice) extension;
-                final String content = setPageDevice.getContent();
+                PSSetPageDevice setPageDevice = (PSSetPageDevice)extension;
+                String content = setPageDevice.getContent();
                 if (content != null) {
                     try {
-                        this.pageDeviceDictionary.putAll(PSDictionary
-                                .valueOf(content));
-                    } catch (final PSDictionaryFormatException e) {
-                        final PSEventProducer eventProducer = PSEventProducer.Provider
-                                .get(getUserAgent().getEventBroadcaster());
-                        eventProducer.postscriptDictionaryParseError(this,
-                                content, e);
+                        this.pageDeviceDictionary.putAll(PSDictionary.valueOf(content));
+                    } catch (PSDictionaryFormatException e) {
+                        PSEventProducer eventProducer = PSEventProducer.Provider.get(
+                                getUserAgent().getEventBroadcaster());
+                        eventProducer.postscriptDictionaryParseError(this, content, e);
                     }
                 }
             } else if (extension instanceof PSCommentBefore) {
                 if (inPage()) {
-                    PSRenderingUtil.writeEnclosedExtensionAttachment(this.gen,
-                            (PSCommentBefore) extension);
+                    PSRenderingUtil.writeEnclosedExtensionAttachment(
+                            gen, (PSCommentBefore)extension);
                 } else {
-                    if (this.comments[COMMENT_DOCUMENT_HEADER] == null) {
-                        this.comments[COMMENT_DOCUMENT_HEADER] = new ArrayList<>();
+                    if (comments[COMMENT_DOCUMENT_HEADER] == null) {
+                        comments[COMMENT_DOCUMENT_HEADER] = new java.util.ArrayList();
                     }
-                    this.comments[COMMENT_DOCUMENT_HEADER]
-                            .add((PSCommentBefore) extension);
+                    comments[COMMENT_DOCUMENT_HEADER].add(extension);
                 }
             } else if (extension instanceof PSCommentAfter) {
-                final int targetCollection = inPage() ? COMMENT_PAGE_TRAILER
-                        : COMMENT_DOCUMENT_TRAILER;
-                if (this.comments[targetCollection] == null) {
-                    this.comments[targetCollection] = new ArrayList<>();
+                int targetCollection = (inPage() ? COMMENT_PAGE_TRAILER : COMMENT_DOCUMENT_TRAILER);
+                if (comments[targetCollection] == null) {
+                    comments[targetCollection] = new java.util.ArrayList();
                 }
-                this.comments[targetCollection].add((PSCommentAfter) extension);
+                comments[targetCollection].add(extension);
+            } else if (extension instanceof PSPageTrailerCodeBefore) {
+                if (comments[PAGE_TRAILER_CODE_BEFORE] == null) {
+                    comments[PAGE_TRAILER_CODE_BEFORE] = new ArrayList();
+                }
+                comments[PAGE_TRAILER_CODE_BEFORE].add(extension);
             }
-        } catch (final IOException ioe) {
+        } catch (IOException ioe) {
             throw new IFException("I/O error in handleExtensionObject()", ioe);
         }
     }
 
     /**
      * Returns the PSResource for the given font key.
-     *
-     * @param key
-     *            the font key ("F*")
+     * @param key the font key ("F*")
      * @return the matching PSResource
      */
-    protected PSResource getPSResourceForFontKey(final String key) {
-        return this.fontResources.getPSResourceForFontKey(key);
+    protected PSFontResource getPSResourceForFontKey(String key) {
+        return this.fontResources.getFontResourceForFontKey(key);
     }
 
     /**
      * Returns a PSResource instance representing a image as a PostScript form.
-     *
-     * @param uri
-     *            the image URI
+     * @param uri the image URI
      * @return a PSResource instance
      */
-    protected PSResource getFormForImage(final String uri) {
+    protected PSResource getFormForImage(String uri) {
         if (uri == null || "".equals(uri)) {
             throw new IllegalArgumentException("uri must not be empty or null");
         }
         if (this.formResources == null) {
-            this.formResources = new HashMap<>();
+            this.formResources = new java.util.HashMap();
         }
-        PSResource form = this.formResources.get(uri);
+        PSResource form = (PSResource)this.formResources.get(uri);
         if (form == null) {
             form = new PSImageFormResource(this.formResources.size() + 1, uri);
             this.formResources.put(uri, form);
@@ -611,11 +577,10 @@ public class PSDocumentHandler extends AbstractBinaryWritingIFDocumentHandler {
     }
 
     private static final class PageDefinition {
-        private final Dimension2D dimensions;
-        private final boolean rotate;
+        private Dimension2D dimensions;
+        private boolean rotate;
 
-        private PageDefinition(final Dimension2D dimensions,
-                final boolean rotate) {
+        private PageDefinition(Dimension2D dimensions, boolean rotate) {
             this.dimensions = dimensions;
             this.rotate = rotate;
         }
