@@ -15,7 +15,9 @@
  * limitations under the License.
  */
 
-/* $Id: RtfStringConverter.java 679326 2008-07-24 09:35:34Z vhennebert $ */
+/* $Id: RtfStringConverter.java 1297284 2012-03-05 23:29:29Z gadams $ */
+
+package org.apache.fop.render.rtf.rtflib.rtfdoc;
 
 /*
  * This file is part of the RTF library of the FOP project, which was originally
@@ -24,37 +26,35 @@
  * the FOP project.
  */
 
-package org.apache.fop.render.rtf.rtflib.rtfdoc;
-
 import java.io.IOException;
 import java.io.Writer;
 import java.util.HashMap;
 import java.util.Map;
 
 /**
- * Converts java Strings according to RTF conventions
- * 
- * @author Bertrand Delacretaz bdelacretaz@codeconsult.ch
+ * <p>Converts java Strings according to RTF conventions.</p>
+ *
+ * <p>This work was authored by Bertrand Delacretaz (bdelacretaz@codeconsult.ch).</p>
  */
 
-public class RtfStringConverter {
-    private static final RtfStringConverter INSTANCE = new RtfStringConverter();
+public final class RtfStringConverter {
 
+    private static final RtfStringConverter INSTANCE = new RtfStringConverter();
     private static final Map SPECIAL_CHARS;
-    private static final Character DBLQUOTE = Character.valueOf('\"');
-    private static final Character QUOTE = Character.valueOf('\'');
-    private static final Character SPACE = Character.valueOf(' ');
+    private static final Character DBLQUOTE = new Character('\"');
+    private static final Character QUOTE = new Character('\'');
+    private static final Character SPACE = new Character(' ');
 
     /** List of characters to escape with corresponding replacement strings */
     static {
-        SPECIAL_CHARS = new HashMap<>();
-        SPECIAL_CHARS.put(Character.valueOf('\t'), "tab");
-        SPECIAL_CHARS.put(Character.valueOf('\n'), "line");
-        SPECIAL_CHARS.put(Character.valueOf('\''), "rquote");
-        SPECIAL_CHARS.put(Character.valueOf('\"'), "rdblquote");
-        SPECIAL_CHARS.put(Character.valueOf('\\'), "\\");
-        SPECIAL_CHARS.put(Character.valueOf('{'), "{");
-        SPECIAL_CHARS.put(Character.valueOf('}'), "}");
+        SPECIAL_CHARS = new HashMap();
+        SPECIAL_CHARS.put(new Character('\t'), "tab");
+        SPECIAL_CHARS.put(new Character('\n'), "line");
+        SPECIAL_CHARS.put(new Character('\''), "rquote");
+        SPECIAL_CHARS.put(new Character('\"'), "rdblquote");
+        SPECIAL_CHARS.put(new Character('\\'), "\\");
+        SPECIAL_CHARS.put(new Character('{'), "{");
+        SPECIAL_CHARS.put(new Character('}'), "}");
     }
 
     /** singleton pattern */
@@ -63,7 +63,6 @@ public class RtfStringConverter {
 
     /**
      * use this to get an object of this class
-     * 
      * @return the singleton instance
      */
     public static RtfStringConverter getInstance() {
@@ -73,16 +72,11 @@ public class RtfStringConverter {
     /**
      * Write given String to given Writer, converting characters as required by
      * RTF spec
-     * 
-     * @param w
-     *            Writer
-     * @param str
-     *            String to be written
-     * @throws IOException
-     *             for I/O problems
+     * @param w Writer
+     * @param str String to be written
+     * @throws IOException for I/O problems
      */
-    public void writeRtfString(final Writer w, final String str)
-            throws IOException {
+    public void writeRtfString(Writer w, String str) throws IOException {
         if (str == null) {
             return;
         }
@@ -91,36 +85,34 @@ public class RtfStringConverter {
 
     /**
      * Escapes a String as required by the RTF spec.
-     * 
-     * @param str
-     *            String to be escaped
+     * @param str String to be escaped
      * @return the escaped string
      */
-    public String escape(final String str) {
+    public String escape(String str) {
         if (str == null) {
             return null;
         }
 
-        final StringBuilder sb = new StringBuilder(Math.max(16, str.length()));
+        StringBuffer sb = new StringBuffer(Math.max(16, str.length()));
         // TODO: could be made more efficient (binary lookup, etc.)
-        for (int i = 0; i < str.length(); ++i) {
-            final Character c = Character.valueOf(str.charAt(i));
+        for (int i = 0; i < str.length(); i++) {
+            final Character c = new Character(str.charAt(i));
             Character d;
             String replacement;
             if (i != 0) {
-                d = Character.valueOf(str.charAt(i - 1));
+                d = new Character(str.charAt(i - 1));
             } else {
-                d = Character.valueOf(str.charAt(i));
+                d = new Character(str.charAt(i));
             }
 
-            // This section modified by Chris Scott
-            // add "smart" quote recognition
-            if (c.equals(DBLQUOTE) && d.equals(SPACE)) {
+            //This section modified by Chris Scott
+            //add "smart" quote recognition
+            if (c.equals((Object)DBLQUOTE) && d.equals((Object)SPACE)) {
                 replacement = "ldblquote";
-            } else if (c.equals(QUOTE) && d.equals(SPACE)) {
+            } else if (c.equals((Object)QUOTE) && d.equals((Object)SPACE)) {
                 replacement = "lquote";
             } else {
-                replacement = (String) SPECIAL_CHARS.get(c);
+                replacement = (String)SPECIAL_CHARS.get(c);
             }
 
             if (replacement != null) {
@@ -132,7 +124,7 @@ public class RtfStringConverter {
                 // write unicode representation - contributed by Michel Jacobson
                 // <jacobson@idf.ext.jussieu.fr>
                 sb.append("\\u");
-                sb.append(Integer.toString(c.charValue()));
+                sb.append(Integer.toString((int)c.charValue()));
                 sb.append("\\\'3f");
             } else {
                 // plain char that is understood by RTF natively
